# lattice

./: .gitignore  .prettierignore  CLAUDE.md  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: delivery-path.md  prototype-01-workspace-design.md  quality-and-releases.md
scripts/: generate-icon.mjs
src/: App.tsx  index.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/core/: Cargo.toml
src-tauri/core/src/: lib.rs  store.rs  vault.rs  watcher.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ActivityRail.tsx  CompareDialog.tsx  EditorPane.tsx  MarkdownEditor.tsx  Onboarding.tsx  RichEditor.tsx  SettingsModal.tsx  StatusBar.tsx  VaultSidebar.tsx  Workspace.tsx  icons.tsx
src/lib/: dnd.ts  tauri.ts
src/lib/blocknote/: adapter.ts  schema.tsx
src/lib/markdown/: convert.test.ts  hash.ts  parse.ts  serialize.ts  title.test.ts  title.ts  types.ts
src/lib/markdown/fixtures/: basic.md  lists.md  mixed.md  quotes-callouts.md  unsupported.md
src/lib/notes/: externalChange.ts  notes.test.ts  saveScheduler.ts
src/state/: workspaceStore.ts
