[package]
name = "lattice"
version = "0.1.0"
description = "Lattice — a local-first learning workspace"
edition = "2021"
license = "MIT"
repository = ""
default-run = "lattice"
rust-version = "1.77"

[workspace]
members = ["core"]

[lib]
name = "lattice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
lattice-core = { path = "core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
