[package]
name = "lattice-core"
version = "0.1.0"
description = "Vault, persistence, and watcher logic for Lattice (no UI dependencies)"
edition = "2021"
license = "MIT"

[dependencies]
notify = "8"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
